# haskhol-haskell

./: HaskHOL-Haskell.cabal  README.md
examples/: Monad.hs  MonadID.hs  terms.h2h  types.h2h
examples/Functor/: Functor.hs  config.h2h  makefile  terms.h2h
examples/List/: List.hs  config.h2h  makefile  terms.h2h  types.h2h
examples/Monad/Either/: Monad.hs  config.h2h  makefile  terms.h2h  types.h2h
examples/Monad/Identity/: config.h2h  terms.h2h
examples/Monad/List/: Monad.hs  config.h2h
examples/Monad/Maybe/: Monad.hs  config.h2h  terms.h2h  types.h2h
src/HaskHOL/: Haskell.hs
src/HaskHOL/Haskell/: Plugin.hs
src/HaskHOL/Haskell/Plugin/: KURE.hs  Parser.hs  Transform.hs
src/HaskHOL/Lib/: Haskell.hs
src/HaskHOL/Lib/Haskell/: A.hs  Base.hs  Context.hs
src/HaskHOL/Lib/Haskell/A/: Base.hs  Context.hs
