name:          haskhol-haskell
version:       0.1.0
synopsis:      A HERMIT plugin for verifying Haskell using HaskHOL.
description:   More details can be found at the following page:  
               http://haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <ecaustin@ittc.ku.edu>
maintainer:    Evan Austin <ecaustin@ittc.ku.edu>
category:      Theorem Provers
cabal-version: >=1.18
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org

extra-source-files: examples/Monad.hs, examples/types.h2h, examples/terms.h2h

library
    default-language:  Haskell2010
    default-extensions:  ConstraintKinds, DeriveDataTypeable, OverloadedStrings,
                         PatternSynonyms, QuasiQuotes, TemplateHaskell,
                         TypeFamilies
    build-depends:   base >=4.7 && < 4.8
                   , haskhol-core >=1.2
                   , haskhol-deductive >=0.2
                   , haskhol-math >=0.1
                   , hermit >= 0.6
                   , ghc >= 7.8
                   , containers >= 0.5
                   , mtl >= 2.1
                   , parsec >= 3.1
                   , text >= 1.2
                   , transformers >= 0.2
                   , hint >= 0.4

    exposed-modules:
      HaskHOL.Haskell
      HaskHOL.Haskell.Plugin
      HaskHOL.Lib.Haskell
      HaskHOL.Lib.Haskell.A.Context
      HaskHOL.Lib.Haskell.Context
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
      HaskHOL.Haskell.Plugin.KURE
      HaskHOL.Haskell.Plugin.Parser
      HaskHOL.Haskell.Plugin.Transform
      HaskHOL.Lib.Haskell.A
      HaskHOL.Lib.Haskell.A.Base
      HaskHOL.Lib.Haskell.Base
          
    ghc-prof-options: -prof -fprof-auto
    ghc-options: -Wall -fcontext-stack=200
 
